--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <div class="header"></div>
 
     <div class="h1">Orgasmeat - Terreaux</div>
+    <div class="h2">Notre selection pour vous</div>
+    <div class="menu"></div>
+    <div class="text">+</div>
 </body>
 </html>
